@@ -945,8 +945,9 @@ HREF="#win32">process</A> for Win32 is different).  Here's what you
 need to do:<P>
 
 <OL>
-  <LI>Install GNU make 3.7 or greater on your system (available via
-      anonymous ftp from prep.ai.mit.edu in the pub/gnu directory).
+  <LI>Install <A HREF="ftp://prep.ai.mit.edu/pub/gnu/make/">GNU make</A>
+  3.7 or greater on your system (available via
+      anonymous ftp from prep.ai.mit.edu in the pub/gnu/make/ directory).
       You <EM>must</EM> use GNU make or ACE won't compile.<P>
 
   <LI>Add an environment variable called ACE_ROOT that contains the
