@@ -1,3 +1,10 @@
+Sun Apr 16 22:24:34 2000  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>
+
+	* ACE-INSTALL.html: Updated the link for GNU make to be more
+	  specific.  Thanks to Xiaojun Wu <depender@yahoo.com> for
+ 	  reporting this.  BTW, Xiaojun was the 900th contributor to
+ 	  ACE+TAO, so he gets a free copy of ACE+TAO!
+
 Mon Apr 17 20:10:18 2000  Vishal  <vishal@cs.wustl.edu>
 
         * ACE version 5.1.1 released.
