@@ -953,6 +953,7 @@ John Rodgers <jrrodgers@acm.org>
 Charles Taurines <ctaurines@amadeus.net>
 James Lacey <jlacey@ftw.paging.mot.com>
 Nick Pratt <npratt@microstrategy.com>
+Xiaojun Wu <depender@yahoo.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson.  Paul devised the recursive Makefile scheme that
